--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,8 +7,11 @@
   </head>
 
   <body>
-    <h1>Hello World!, we are software developers!</h1>    
-        
+    <header id="header"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="trombons-image" id="header-img"></header>
+    
+
+
+    <h1>Hello World!, we are software developers!</h1>            
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
