--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,7 +7,18 @@
   </head>
 
   <body>
-    <header id="header"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="trombons-image" id="header-img"></header>
+    <header id="header">
+      <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="trombons-image" id="header-img">
+      <nav id="nav-bar">
+        <ul>
+          <li class="nav-link"><a href="#">Element 1</a></li>
+          <li class="nav-link"><a href="#">Element 2</a></li>
+          <li class="nav-link"><a href="#">Element 3</a></li>
+        </ul>
+      </nav>
+    </header>
+
+
     
 
 
