--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -11,14 +11,21 @@
       <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="trombons-image" id="header-img">
       <nav id="nav-bar">
         <ul>
-          <li class="nav-link"><a href="#">Element 1</a></li>
-          <li class="nav-link"><a href="#">Element 2</a></li>
-          <li class="nav-link"><a href="#">Element 3</a></li>
+          <li class="nav-link"><a href="#element1">Element 1</a></li>
+          <li class="nav-link"><a href="#element2">Element 2</a></li>
+          <li class="nav-link"><a href="#element3">Element 3</a></li>
         </ul>
       </nav>
     </header>
 
-
+    <section id="element1">Element1</section>
+    <section id="element2">
+      <video id="video" width="320" height="240" controls>
+        <source src="https://www.youtube.com/watch?v=Tr5bEXN6mvE&list=RDTr5bEXN6mvE&start_radio=1&ab_channel=LatinHype" type="video/mp4">
+        Your browser does not support HTML video.
+      </video>
+    </section>
+    <section id="element3">Element3</section>
     
 
 
