Story7 and Story8 done.

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -18,6 +18,11 @@
       </nav>
     </header>
 
+    <form id="form">
+      <label>Email:</label>
+      <input type="email" id="email">
+    </form>
+
     <section id="element1">Element1</section>
     <section id="element2">
       <video id="video" width="320" height="240" controls>
@@ -26,6 +31,8 @@
       </video>
     </section>
     <section id="element3">Element3</section>
+
+
     
 
 
