--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -20,7 +20,7 @@
 
     <form id="form">
       <label>Email:</label>
-      <input type="email" id="email">
+      <input type="email" id="email" placeholder="Enter your email here">
     </form>
 
     <section id="element1">Element1</section>
