--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -11,9 +11,9 @@
       <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="trombons-image" id="header-img">
       <nav id="nav-bar">
         <ul>
-          <li class="nav-link" href="#element1"><a>Element 1</a></li>
-          <li class="nav-link" href="#element2"><a>Element 2</a></li>
-          <li class="nav-link" href="#element3"><a>Element 3</a></li>
+          <li><a class="nav-link" href="#element1">Element 1</a></li>
+          <li><a class="nav-link" href="#element2">Element 2</a></li>
+          <li><a class="nav-link" href="#element3">Element 3</a></li>
         </ul>
       </nav>
     </header>
